add normalization in doc notebooks

--- a/docs/source/example_ltas_core.ipynb
+++ b/docs/source/example_ltas_core.ipynb
@@ -60,7 +60,10 @@
     ").data[0]\n",
     "\n",
     "# Resampling at 24 kHz\n",
-    "audio_data.sample_rate = 24_000"
+    "audio_data.sample_rate = 24_000\n",
+    "\n",
+    "# Removing the DC component\n",
+    "audio_data.normalization = \"dc_reject\""
    ]
   },
   {
