--- a/docs/source/example_multiple_spectrograms_core.ipynb
+++ b/docs/source/example_multiple_spectrograms_core.ipynb
@@ -61,6 +61,8 @@
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
     "    instrument=Instrument(end_to_end_db=150.0),\n",
+    "    sample_rate=24_000,\n",
+    "    normalization=\"dc_reject\",\n",
     ")"
    ]
   },
@@ -192,7 +194,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "spectro_dataset.data[0].plot()\n",
+    "spectro_dataset.data[1].plot()\n",
     "plt.show()"
    ]
   },
