--- a/docs/source/example_multiple_spectrograms_public.ipynb
+++ b/docs/source/example_multiple_spectrograms_public.ipynb
@@ -143,6 +143,7 @@
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
     "    sample_rate=sample_rate,\n",
+    "    normalization=\"dc_reject\",\n",
     "    fft=sft,\n",
     "    v_lim=(0.0, 150.0),  # Boundaries of the spectrograms\n",
     "    colormap=\"viridis\",  # Default value\n",
