--- a/docs/source/example_reshaping_multiple_files_public.ipynb
+++ b/docs/source/example_reshaping_multiple_files_public.ipynb
@@ -111,6 +111,8 @@
     "    begin=Timestamp(\"2022-09-25 22:35:15\"),\n",
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
+    "    sample_rate=24_000,\n",
+    "    normalization=\"dc_reject\",\n",
     "    name=\"reshape_example\",\n",
     ")"
    ],
