--- a/docs/source/example_reshaping_one_file.ipynb
+++ b/docs/source/example_reshaping_one_file.ipynb
@@ -86,14 +86,15 @@
    "cell_type": "markdown",
    "id": "8ae4db7363a92148",
    "metadata": {},
-   "source": "Simply resample the `AudioData` by setting this property:"
+   "source": "Simply resample and normalize the `AudioData` by setting the corresponding properties:"
   },
   {
    "cell_type": "code",
    "id": "8c672c04078d395e",
    "metadata": {},
    "source": [
-    "audio_data.sample_rate = 24_000"
+    "audio_data.sample_rate = 24_000\n",
+    "audio_data.normalization = \"dc_reject\""
    ],
    "outputs": [],
    "execution_count": null
