--- a/docs/source/example_spectrogram.ipynb
+++ b/docs/source/example_spectrogram.ipynb
@@ -79,6 +79,7 @@
     "    begin=Timestamp(\"2022-09-25 22:34:55\"),\n",
     "    end=Timestamp(\"2022-09-25 22:35:05\"),\n",
     "    sample_rate=40000,\n",
+    "    normalization=\"dc_reject\",\n",
     "    instrument=Instrument(end_to_end_db=150.0),\n",
     ")"
    ]
