remove reset cell from public LTAS notebook

--- a/docs/source/example_ltas_public.ipynb
+++ b/docs/source/example_ltas_public.ipynb
@@ -197,7 +197,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e05d653bc1e8bfe2",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Reset the dataset to get all files back to place.\n",
