use Normalization flag in example notebooks

--- a/docs/source/example_ltas_core.ipynb
+++ b/docs/source/example_ltas_core.ipynb
@@ -51,6 +51,7 @@
     "audio_folder = Path(r\"_static/sample_audio\")\n",
     "\n",
     "from osekit.core_api.audio_dataset import AudioDataset\n",
+    "from osekit.utils.audio_utils import Normalization\n",
     "from osekit.core_api.instrument import Instrument\n",
     "\n",
     "audio_data = AudioDataset.from_folder(\n",
@@ -63,7 +64,7 @@
     "audio_data.sample_rate = 24_000\n",
     "\n",
     "# Removing the DC component\n",
-    "audio_data.normalization = \"dc_reject\""
+    "audio_data.normalization = Normalization.DC_REJECT"
    ]
   },
   {
