--- a/docs/source/example_spectrogram.ipynb
+++ b/docs/source/example_spectrogram.ipynb
@@ -72,6 +72,7 @@
    "source": [
     "from osekit.core_api.audio_data import AudioData\n",
     "from osekit.core_api.instrument import Instrument\n",
+    "from osekit.utils.audio_utils import Normalization\n",
     "from pandas import Timestamp\n",
     "\n",
     "audio_data = AudioData.from_files(\n",
@@ -79,7 +80,7 @@
     "    begin=Timestamp(\"2022-09-25 22:34:55\"),\n",
     "    end=Timestamp(\"2022-09-25 22:35:05\"),\n",
     "    sample_rate=40000,\n",
-    "    normalization=\"dc_reject\",\n",
+    "    normalization=Normalization.DC_REJECT,  # Rejects the DC component\n",
     "    instrument=Instrument(end_to_end_db=150.0),\n",
     ")"
    ]
