--- a/docs/source/example_ltas_public.ipynb
+++ b/docs/source/example_ltas_public.ipynb
@@ -134,6 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from osekit.utils.audio_utils import Normalization\n",
     "from osekit.public_api.analysis import Analysis, AnalysisType\n",
     "\n",
     "analysis = Analysis(\n",
@@ -141,7 +142,7 @@
     "    | AnalysisType.MATRIX,  # we want to export both the spectrogram and the sx matrix\n",
     "    nb_ltas_time_bins=3000,  # This will turn the regular spectrum computation in a LTAS\n",
     "    sample_rate=sample_rate,\n",
-    "    normalization=\"dc_reject\",  # Removes the DC component\n",
+    "    normalization=Normalization.DC_REJECT,  # Removes the DC component\n",
     "    fft=sft,\n",
     "    v_lim=(0.0, 150.0),  # Boundaries of the spectrograms\n",
     "    colormap=\"viridis\",  # Default value\n",
