--- a/docs/source/example_reshaping_multiple_files_public.ipynb
+++ b/docs/source/example_reshaping_multiple_files_public.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "dc7ebca70b3b5da",
    "metadata": {
     "tags": [
      "remove-cell"
     ]
    },
+   "outputs": [],
    "source": [
     "# Executing this cell will disable all TQDM outputs in stdout.\n",
     "import os\n",
     "\n",
+    "from osekit.utils.audio_utils import Normalization\n",
+    "\n",
     "os.environ[\"DISABLE_TQDM\"] = \"True\""
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,10 +37,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "bb002105fc9632e8",
    "metadata": {
     "tags": []
    },
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -52,9 +56,7 @@
     ")\n",
     "\n",
     "dataset.build()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,8 +66,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "a29c761d4bbd5303",
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(f\"{' DATASET ':#^60}\")\n",
     "print(f\"{'Begin:':<30}{str(dataset.origin_dataset.begin):>30}\")\n",
@@ -86,9 +90,7 @@
     "        for f in dataset.origin_files\n",
     "    ],\n",
     ").set_index(\"Name\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,10 +100,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "b4c2c3857ffcb60f",
    "metadata": {
     "tags": []
    },
+   "outputs": [],
    "source": [
     "from osekit.public_api.analysis import Analysis, AnalysisType\n",
     "from pandas import Timestamp, Timedelta\n",
@@ -112,12 +116,10 @@
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
     "    sample_rate=24_000,\n",
-    "    normalization=\"dc_reject\",\n",
+    "    normalization=Normalization.DC_REJECT,\n",
     "    name=\"reshape_example\",\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,19 +132,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "2f799a26d626e418",
    "metadata": {
     "tags": []
    },
+   "outputs": [],
    "source": [
     "# Returns a Core API AudioDataset that matches the analysis\n",
     "audio_dataset = dataset.get_analysis_audiodataset(analysis=analysis)\n",
     "\n",
     "# Filter the returned AudioDataset\n",
     "audio_dataset.data = [ad for ad in audio_dataset.data if not ad.is_empty]"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,15 +154,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "9b65cfdc720d50e6",
    "metadata": {
     "tags": []
    },
+   "outputs": [],
    "source": [
     "dataset.run_analysis(analysis=analysis, audio_dataset=audio_dataset)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,8 +172,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "3cb0adbb96d2251a",
    "metadata": {},
+   "outputs": [],
    "source": [
     "pd.DataFrame(\n",
     "    [\n",
@@ -184,25 +188,23 @@
     "        for ad in dataset.get_dataset(analysis.name).data\n",
     "    ],\n",
     ").set_index(\"Exported file\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "58b7aec2d8863a02",
    "metadata": {
     "tags": [
      "remove-cell"
     ]
    },
+   "outputs": [],
    "source": [
     "# Reset the dataset to get all files back to place.\n",
     "\n",
     "dataset.reset()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
