add setup_logging() call in publicAPI doc notebooks

--- a/docs/source/example_ltas_public.ipynb
+++ b/docs/source/example_ltas_public.ipynb
@@ -11,10 +11,17 @@
    },
    "outputs": [],
    "source": [
-    "# Executing this cell will disable all TQDM outputs in stdout.\n",
+    "# Executing this cell will:\n",
+    "\n",
+    "# Disable all TQDM outputs in stdout.\n",
     "import os\n",
     "\n",
-    "os.environ[\"DISABLE_TQDM\"] = \"True\""
+    "os.environ[\"DISABLE_TQDM\"] = \"True\"\n",
+    "\n",
+    "# Setup the python logger for the Public API\n",
+    "from osekit import setup_logging\n",
+    "\n",
+    "setup_logging()  # Overwrites the default logger to"
    ]
   },
   {
