[FEATURE] Audio normalization (#268)
* add normalization functions to audio_utils module

* add normalization util tests

* add AudioData.normalization property

* remove AudioData.get_value reject_dc parameter

* add AudioData normalization serialization

* add AudioData normalization serialization tests

* add normalization to AudioDataset

* add AudioData and AudioDataset normalization tests

* add AudioDataset normalization serialization tests

* add public_api normalization in analysis

* add AudioData.normalization in the docs

* add AudioDataset.normalization in the docs

* add public API normalization in doc

* add AudioDataset.from_folder sample_rate parameter

* add normalization in doc notebooks

* remove reset cell from public LTAS notebook

* change normalization to a Flag

* adapt normalization test to new normalization system

* add combined normalization test

* use metaclass to check normalization validity on call

* use new Normalization flag in AudioData

* use new Normalization flag in AudioDataset

* use Normalization flag in the public API

* use Normalization flag in example notebooks

* update docs with Normalization flag

* add Normalization flag to API doc

* add negative peak tests

* fix peak normalization with negative values

* move Normalization import to idoine cell

---------

Co-authored-by: Gauthier BERTHOMIEU <gauthier.berthomieu@ensta.fr>

--- a/docs/source/example_ltas_public.ipynb
+++ b/docs/source/example_ltas_public.ipynb
@@ -141,6 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from osekit.utils.audio_utils import Normalization\n",
     "from osekit.public_api.analysis import Analysis, AnalysisType\n",
     "\n",
     "analysis = Analysis(\n",
@@ -148,6 +149,7 @@
     "    | AnalysisType.MATRIX,  # we want to export both the spectrogram and the sx matrix\n",
     "    nb_ltas_time_bins=3000,  # This will turn the regular spectrum computation in a LTAS\n",
     "    sample_rate=sample_rate,\n",
+    "    normalization=Normalization.DC_REJECT,  # Removes the DC component\n",
     "    fft=sft,\n",
     "    v_lim=(0.0, 150.0),  # Boundaries of the spectrograms\n",
     "    colormap=\"viridis\",  # Default value\n",
@@ -203,7 +205,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e05d653bc1e8bfe2",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Reset the dataset to get all files back to place.\n",
