--- a/docs/source/example_reshaping_multiple_files_core.ipynb
+++ b/docs/source/example_reshaping_multiple_files_core.ipynb
@@ -47,6 +47,7 @@
     "audio_folder = Path(r\"_static/sample_audio\")\n",
     "\n",
     "from osekit.core_api.audio_dataset import AudioDataset\n",
+    "from osekit.utils.audio_utils import Normalization\n",
     "from pandas import Timestamp, Timedelta\n",
     "\n",
     "audio_dataset = AudioDataset.from_folder(\n",
@@ -55,6 +56,8 @@
     "    begin=Timestamp(\"2022-09-25 22:35:15\"),\n",
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
+    "    sample_rate=24_000,\n",
+    "    normalization=Normalization.DC_REJECT,\n",
     ")"
    ],
    "outputs": [],
