--- a/docs/source/example_reshaping_multiple_files_public.ipynb
+++ b/docs/source/example_reshaping_multiple_files_public.ipynb
@@ -113,6 +113,7 @@
    "outputs": [],
    "source": [
     "from osekit.public_api.analysis import Analysis, AnalysisType\n",
+    "from osekit.utils.audio_utils import Normalization\n",
     "from pandas import Timestamp, Timedelta\n",
     "\n",
     "analysis = Analysis(\n",
@@ -120,6 +121,8 @@
     "    begin=Timestamp(\"2022-09-25 22:35:15\"),\n",
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
+    "    sample_rate=24_000,\n",
+    "    normalization=Normalization.DC_REJECT,\n",
     "    name=\"reshape_example\",\n",
     ")"
    ]
