--- a/docs/source/example_reshaping_one_file.ipynb
+++ b/docs/source/example_reshaping_one_file.ipynb
@@ -24,10 +24,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from osekit.core_api.audio_file import AudioFile\n",
@@ -36,9 +38,7 @@
     "    path=Path(r\"_static/sample_audio/sample_220925_223450.wav\"),\n",
     "    strptime_format=\"%y%m%d_%H%M%S\",\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,16 +48,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "8df490fff812332",
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(f\"{' FILE ':#^60}\")\n",
     "print(f\"{'Begin:':<30}{str(audio_file.begin):>30}\")\n",
     "print(f\"{'End:':<30}{str(audio_file.end):>30}\")\n",
     "print(f\"{'Sample rate:':<30}{str(audio_file.sample_rate):>30}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,8 +67,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "63edf1d81811bf4b",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from osekit.core_api.audio_data import AudioData\n",
     "from pandas import Timestamp\n",
@@ -78,25 +80,26 @@
     "    begin=Timestamp(\"2022-09-25 22:34:52\"),\n",
     "    end=Timestamp(\"2022-09-25 22:34:56\"),\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "8ae4db7363a92148",
    "metadata": {},
-   "source": "Simply resample the `AudioData` by setting this property:"
+   "source": "Simply resample and normalize the `AudioData` by setting the corresponding properties:"
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "8c672c04078d395e",
    "metadata": {},
-   "source": [
-    "audio_data.sample_rate = 24_000"
-   ],
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "from osekit.utils.audio_utils import Normalization\n",
+    "\n",
+    "audio_data.sample_rate = 24_000\n",
+    "audio_data.normalization = Normalization.DC_REJECT  # Removes the DC component"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,16 +109,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "9b3faf84f6e45cf2",
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(f\"{' AUDIO DATA ':#^60}\")\n",
     "print(f\"{'Begin:':<30}{str(audio_data.begin):>30}\")\n",
     "print(f\"{'End:':<30}{str(audio_data.end):>30}\")\n",
     "print(f\"{'Sample rate:':<30}{str(audio_data.sample_rate):>30}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,17 +128,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "ddc9e9c82bca1c41",
    "metadata": {},
+   "outputs": [],
    "source": [
     "wav_data = audio_data.get_value()\n",
     "\n",
     "print(\n",
     "    f\"WAV data should be {int(audio_data.duration.total_seconds())}*{audio_data.sample_rate:_} samples long: {len(wav_data):_} == {int(audio_data.duration.total_seconds()) * audio_data.sample_rate:_} samples\"\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,17 +148,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "2d35931b8c9def2e",
    "metadata": {
     "tags": [
      "skip-execution"
     ]
    },
+   "outputs": [],
    "source": [
     "audio_data.write(Path(r\"../docs/source/_static/sample_audio/exported_files/\"))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
