--- a/docs/source/example_multiple_spectrograms_core.ipynb
+++ b/docs/source/example_multiple_spectrograms_core.ipynb
@@ -52,6 +52,7 @@
     "\n",
     "from osekit.core_api.audio_dataset import AudioDataset\n",
     "from osekit.core_api.instrument import Instrument\n",
+    "from osekit.utils.audio_utils import Normalization\n",
     "from pandas import Timestamp, Timedelta\n",
     "\n",
     "audio_dataset = AudioDataset.from_folder(\n",
@@ -61,6 +62,8 @@
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
     "    instrument=Instrument(end_to_end_db=150.0),\n",
+    "    sample_rate=24_000,\n",
+    "    normalization=Normalization.DC_REJECT,\n",
     ")"
    ]
   },
@@ -192,7 +195,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "spectro_dataset.data[0].plot()\n",
+    "spectro_dataset.data[1].plot()\n",
     "plt.show()"
    ]
   },
