--- a/docs/source/example_multiple_spectrograms_public.ipynb
+++ b/docs/source/example_multiple_spectrograms_public.ipynb
@@ -140,6 +140,7 @@
    "outputs": [],
    "source": [
     "from osekit.public_api.analysis import Analysis, AnalysisType\n",
+    "from osekit.utils.audio_utils import Normalization\n",
     "from pandas import Timestamp, Timedelta\n",
     "\n",
     "analysis = Analysis(\n",
@@ -150,6 +151,7 @@
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
     "    sample_rate=sample_rate,\n",
+    "    normalization=Normalization.DC_REJECT,\n",
     "    fft=sft,\n",
     "    v_lim=(0.0, 150.0),  # Boundaries of the spectrograms\n",
     "    colormap=\"viridis\",  # Default value\n",
