add overlap in doc

--- a/docs/source/example_multiple_spectrograms_core.ipynb
+++ b/docs/source/example_multiple_spectrograms_core.ipynb
@@ -61,6 +61,7 @@
     "    begin=Timestamp(\"2022-09-25 22:35:15\"),\n",
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
+    "    overlap=0.25,\n",
     "    instrument=Instrument(end_to_end_db=150.0),\n",
     "    sample_rate=24_000,\n",
     "    normalization=Normalization.DC_REJECT,\n",
@@ -184,7 +185,7 @@
    "cell_type": "markdown",
    "id": "b3fd3bd205bc369c",
    "metadata": {},
-   "source": "We can plot a `SpectroData` object if we want to glance at the output before computing all spectrograms:"
+   "source": "We can plot sample `SpectroData` object(s) if we want to glance at the output before computing all spectrograms (notice the 25% overlap as specified):"
   },
   {
    "cell_type": "code",
@@ -195,7 +196,10 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "spectro_dataset.data[1].plot()\n",
+    "fig, axs = plt.subplots(2, 1)\n",
+    "\n",
+    "spectro_dataset.data[2].plot(ax=axs[0])\n",
+    "spectro_dataset.data[3].plot(ax=axs[1])\n",
     "plt.show()"
    ]
   },
