--- a/docs/source/example_multiple_spectrograms_public.ipynb
+++ b/docs/source/example_multiple_spectrograms_public.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dc7ebca70b3b5da",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-13T11:25:15.629114Z",
+     "start_time": "2025-11-13T11:25:15.535616Z"
+    },
     "tags": [
      "remove-cell"
     ]
@@ -46,12 +50,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb002105fc9632e8",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-13T11:25:21.374824Z",
+     "start_time": "2025-11-13T11:25:18.067636Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t2025-11-13 12:25:20,650\n",
+      "Building the dataset...\n",
+      "\n",
+      "\t2025-11-13 12:25:20,652\n",
+      "Analyzing original audio files...\n",
+      "\n",
+      "\t2025-11-13 12:25:20,680\n",
+      "Organizing dataset folder...\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "PermissionError",
+     "evalue": "[WinError 32] Le processus ne peut pas accéder au fichier car ce fichier est utilisé par un autre processus: '_static\\\\sample_audio\\\\sample_220925_223530.wav' -> '_static\\\\sample_audio\\\\data\\\\audio\\\\original\\\\sample_220925_223530.wav'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mPermissionError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mosekit\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore_api\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01minstrument\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Instrument\n\u001b[32m      8\u001b[39m dataset = Dataset(\n\u001b[32m      9\u001b[39m     folder=audio_folder,\n\u001b[32m     10\u001b[39m     strptime_format=\u001b[33m\"\u001b[39m\u001b[33m%\u001b[39m\u001b[33my\u001b[39m\u001b[33m%\u001b[39m\u001b[33mm\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33m_\u001b[39m\u001b[33m%\u001b[39m\u001b[33mH\u001b[39m\u001b[33m%\u001b[39m\u001b[33mM\u001b[39m\u001b[33m%\u001b[39m\u001b[33mS\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     11\u001b[39m     instrument=Instrument(end_to_end_db=\u001b[32m150.0\u001b[39m),\n\u001b[32m     12\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[43mdataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbuild\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\Documents\\GitHub\\OSEkit\\src\\osekit\\public_api\\dataset.py:156\u001b[39m, in \u001b[36mDataset.build\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    144\u001b[39m \u001b[38;5;28mself\u001b[39m.logger.info(\u001b[33m\"\u001b[39m\u001b[33mOrganizing dataset folder...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    145\u001b[39m move_tree(\n\u001b[32m    146\u001b[39m     source=\u001b[38;5;28mself\u001b[39m.folder,\n\u001b[32m    147\u001b[39m     destination=\u001b[38;5;28mself\u001b[39m.folder / \u001b[33m\"\u001b[39m\u001b[33mother\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m    154\u001b[39m     | {\u001b[38;5;28mself\u001b[39m.folder / \u001b[33m\"\u001b[39m\u001b[33mlog\u001b[39m\u001b[33m\"\u001b[39m},\n\u001b[32m    155\u001b[39m )\n\u001b[32m--> \u001b[39m\u001b[32m156\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_sort_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mads\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    157\u001b[39m ads.write_json(ads.folder)\n\u001b[32m    158\u001b[39m \u001b[38;5;28mself\u001b[39m.write_json()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\Documents\\GitHub\\OSEkit\\src\\osekit\\public_api\\dataset.py:513\u001b[39m, in \u001b[36mDataset._sort_dataset\u001b[39m\u001b[34m(self, dataset)\u001b[39m\n\u001b[32m    511\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_sort_dataset\u001b[39m(\u001b[38;5;28mself\u001b[39m, dataset: \u001b[38;5;28mtype\u001b[39m[DatasetChild]) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    512\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(dataset) \u001b[38;5;129;01mis\u001b[39;00m AudioDataset:\n\u001b[32m--> \u001b[39m\u001b[32m513\u001b[39m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_sort_audio_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    514\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m    515\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(dataset) \u001b[38;5;129;01mis\u001b[39;00m SpectroDataset | LTASDataset:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\Documents\\GitHub\\OSEkit\\src\\osekit\\public_api\\dataset.py:520\u001b[39m, in \u001b[36mDataset._sort_audio_dataset\u001b[39m\u001b[34m(self, dataset)\u001b[39m\n\u001b[32m    519\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_sort_audio_dataset\u001b[39m(\u001b[38;5;28mself\u001b[39m, dataset: AudioDataset) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m520\u001b[39m     \u001b[43mdataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmove_files\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_audio_dataset_subpath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\Documents\\GitHub\\OSEkit\\src\\osekit\\core_api\\base_dataset.py:152\u001b[39m, in \u001b[36mBaseDataset.move_files\u001b[39m\u001b[34m(self, folder)\u001b[39m\n\u001b[32m    143\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Move the dataset files to the destination folder.\u001b[39;00m\n\u001b[32m    144\u001b[39m \n\u001b[32m    145\u001b[39m \u001b[33;03mParameters\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    149\u001b[39m \n\u001b[32m    150\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    151\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mself\u001b[39m.files, disable=os.environ.get(\u001b[33m\"\u001b[39m\u001b[33mDISABLE_TQDM\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m)):\n\u001b[32m--> \u001b[39m\u001b[32m152\u001b[39m     \u001b[43mfile\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmove\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfolder\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    153\u001b[39m \u001b[38;5;28mself\u001b[39m._folder = folder\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\Documents\\GitHub\\OSEkit\\src\\osekit\\core_api\\audio_file.py:128\u001b[39m, in \u001b[36mAudioFile.move\u001b[39m\u001b[34m(self, folder)\u001b[39m\n\u001b[32m    119\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Move the file to the target folder.\u001b[39;00m\n\u001b[32m    120\u001b[39m \n\u001b[32m    121\u001b[39m \u001b[33;03mParameters\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    125\u001b[39m \n\u001b[32m    126\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    127\u001b[39m afm.close()\n\u001b[32m--> \u001b[39m\u001b[32m128\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmove\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfolder\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\Documents\\GitHub\\OSEkit\\src\\osekit\\core_api\\base_file.py:171\u001b[39m, in \u001b[36mBaseFile.move\u001b[39m\u001b[34m(self, folder)\u001b[39m\n\u001b[32m    169\u001b[39m destination_path = folder / \u001b[38;5;28mself\u001b[39m.path.name\n\u001b[32m    170\u001b[39m folder.mkdir(exist_ok=\u001b[38;5;28;01mTrue\u001b[39;00m, parents=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m171\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrename\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdestination_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    172\u001b[39m \u001b[38;5;28mself\u001b[39m.path = destination_path\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\uv\\python\\cpython-3.13.3-windows-x86_64-none\\Lib\\pathlib\\_local.py:767\u001b[39m, in \u001b[36mPath.rename\u001b[39m\u001b[34m(self, target)\u001b[39m\n\u001b[32m    757\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mrename\u001b[39m(\u001b[38;5;28mself\u001b[39m, target):\n\u001b[32m    758\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    759\u001b[39m \u001b[33;03m    Rename this path to the target path.\u001b[39;00m\n\u001b[32m    760\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    765\u001b[39m \u001b[33;03m    Returns the new Path instance pointing to the target path.\u001b[39;00m\n\u001b[32m    766\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m767\u001b[39m     \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrename\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    768\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.with_segments(target)\n",
+      "\u001b[31mPermissionError\u001b[39m: [WinError 32] Le processus ne peut pas accéder au fichier car ce fichier est utilisé par un autre processus: '_static\\\\sample_audio\\\\sample_220925_223530.wav' -> '_static\\\\sample_audio\\\\data\\\\audio\\\\original\\\\sample_220925_223530.wav'"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -150,6 +192,7 @@
     "    begin=Timestamp(\"2022-09-25 22:35:15\"),\n",
     "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
     "    data_duration=Timedelta(seconds=5),\n",
+    "    overlap=0.25,\n",
     "    sample_rate=sample_rate,\n",
     "    normalization=Normalization.DC_REJECT,\n",
     "    fft=sft,\n",
@@ -205,7 +248,10 @@
     "    audio_dataset=audio_dataset,  # So that the filtered SpectroDataset is returned\n",
     ")\n",
     "\n",
-    "analysis_spectro_dataset.data[1].plot()\n",
+    "fig, axs = plt.subplots(2, 1)\n",
+    "analysis_spectro_dataset.data[2].plot(ax=axs[0])\n",
+    "analysis_spectro_dataset.data[3].plot(ax=axs[1])\n",
+    "\n",
     "plt.show()"
    ]
   },
