add id audio files

--- a/docs/source/example_ltas_public.ipynb
+++ b/docs/source/example_ltas_public.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "audio_folder = Path(r\"_static/sample_audio\")\n",
+    "audio_folder = Path(r\"_static/sample_audio/timestamped\")\n",
     "\n",
     "from osekit.public_api.dataset import Dataset\n",
     "from osekit.core_api.instrument import Instrument\n",
