--- a/docs/source/example_reshaping_one_file.ipynb
+++ b/docs/source/example_reshaping_one_file.ipynb
@@ -35,7 +35,7 @@
     "from osekit.core_api.audio_file import AudioFile\n",
     "\n",
     "audio_file = AudioFile(\n",
-    "    path=Path(r\"_static/sample_audio/sample_220925_223450.wav\"),\n",
+    "    path=Path(r\"_static/sample_audio/timestamped/sample_220925_223450.wav\"),\n",
     "    strptime_format=\"%y%m%d_%H%M%S\",\n",
     ")"
    ]
@@ -157,7 +157,9 @@
    },
    "outputs": [],
    "source": [
-    "audio_data.write(Path(r\"../docs/source/_static/sample_audio/exported_files/\"))"
+    "audio_data.write(\n",
+    "    Path(r\"../docs/source/_static/sample_audio/timestamped/exported_files/\")\n",
+    ")"
    ]
   }
  ],
