--- a/docs/source/example_spectrogram.ipynb
+++ b/docs/source/example_spectrogram.ipynb
@@ -37,7 +37,7 @@
     "from pathlib import Path\n",
     "from osekit.core_api.audio_file import AudioFile\n",
     "\n",
-    "audio_folder = Path(r\"_static/sample_audio\")\n",
+    "audio_folder = Path(r\"_static/sample_audio/timestamped\")\n",
     "audio_files = [\n",
     "    AudioFile(\n",
     "        path=p,\n",
