--- a/docs/source/example_ltas_core.ipynb
+++ b/docs/source/example_ltas_core.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "audio_folder = Path(r\"_static/sample_audio\")\n",
+    "audio_folder = Path(r\"_static/sample_audio/timestamped\")\n",
     "\n",
     "from osekit.core_api.audio_dataset import AudioDataset\n",
     "from osekit.utils.audio_utils import Normalization\n",
