--- a/docs/source/example_reshaping_multiple_files_public.ipynb
+++ b/docs/source/example_reshaping_multiple_files_public.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "audio_folder = Path(r\"_static/sample_audio\")\n",
+    "audio_folder = Path(r\"_static/sample_audio/timestamped\")\n",
     "\n",
     "from osekit.public_api.dataset import Dataset\n",
     "\n",
